--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "gitbook-publishable-template",
+  "name": "fms-guide",
   "version": "1.0.0",
-  "description": "A template for publishing a Gitboo",
+  "description": "A Guide to using FMS",
   "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rebeccapeltz/gitbook-publishable-template.git"
+    "url": "git+https://github.com/john-kim-forcs/fms-guide.git"
   },
-  "author": "Becky Peltz",
+  "author": "John Kim",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/rebeccapeltz/gitbook-publishable-template/issues"
+    "url": "https://github.com/john-kim-forcs/fms-guide/issues"
   },
   "devDependencies": {
     "child_process": "^1.0.2",
@@ -21,5 +21,5 @@
     "gulp": "4.0.0",
     "gulp-load-plugins": "^1.5.0"
   },
-  "homepage": "https://github.com/rebeccapeltz/gitbook-publishable-tempalte#readme"
+  "homepage": "https://github.com/john-kim-forcs/fms-guide#readme"
 }
